# santai-cli

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  SECURITY_REVIEW.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  claude.yml  do-not-merge.yml  opencode.yml  publish.yml  smoke-test.yml
agents/: HOW_TO_USE.md  README.md  database.md  documentation.md  finance.md  health.md  writing.md
docs/: agents.md  configuration.md  getting-started.md  index.md  use-cases.md
docs/commands/: auth.md  chat.md  cherry_pick.md  copy.md  index.md  init.md  merge.md  pull.md  push.md  server.md  ui.md  web.md
history/: 2026-04-09-web-ui-redesign-liquid-glass.md
src/santai_cli/: __init__.py  __main__.py  cli.py
src/santai_cli/agents/: HOW_TO_USE.md  README.md  activities-food.md  api.md  browser.md  code-review.md  data-analysis.md  devops.md  documentation.md  learning.md  linting.md  notes.md  productivity.md  research.md  security.md  summarizer.md  testing.md  travel.md  wiki.md
src/santai_cli/commands/: __init__.py  auth.py  chat.py  cherry_pick.py  copy.py  history.py  init.py  merge.py  pull.py  push.py  server.py  ui.py  web.py
src/santai_cli/core/: __init__.py  chat.py  chat_history.py  config.py  hub.py  models.py  project.py  repo_context.py
src/santai_cli/server/: __init__.py  app.py  auth.py  models.py  routes.py
src/santai_cli/tui/: __init__.py  app.py  graph_render.py  themes.py
src/santai_cli/tui/design/: DESIGN-btop.md  DESIGN-cat.md  DESIGN-claude.md  DESIGN.md  DESIGNS.md
src/santai_cli/web/: __init__.py  app.py
src/santai_cli/web/templates/: index.html
tests/: test_chat_history.py  test_models.py  test_undo_manager.js  test_undo_operations.py
