[project]
name = "santai-cli"
version = "0.1.0"
description = "Santai project management CLI"
readme = "README.md"
authors = [
    { name = "Santai Engineering", email = "engineering@sant.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "textual>=0.50.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
santai = "santai_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/santai_cli"]
