[project]
name = "santai-cli"
version = "0.1.0"
description = "A CLI Collaborative Knowledge Base Management System"
readme = "README.md"
authors = [
    { name = "Santai Engineering", email = "engineering@sant.ai" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0,<1.0",
    "textual>=0.50.0,<9.0",
    "fastapi>=0.110.0,<1.0",
    "uvicorn[standard]>=0.27.0,<1.0",
    "jinja2>=3.1.0,<4.0",
    "rich>=13.0.0,<16.0",
    "python-multipart>=0.0.9,<1.0",
    "anthropic>=0.42.0,<1.0",
    "openai>=1.60.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
    "httpx>=0.27.0,<1.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.12",
    "ty>=0.0.31",
    "pre-commit>=3.5.0",
]

[project.scripts]
santai = "santai_cli.cli:app"

[project.urls]
Homepage = "https://github.com/santai-inc/santai-cli"
Repository = "https://github.com/santai-inc/santai-cli"
Issues = "https://github.com/santai-inc/santai-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/santai_cli"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".git",
    ".github",
    ".env",
    ".env.*",
    "!.env.example",
    ".ruff_cache",
    ".rumdl_cache",
    ".venv",
    "__pycache__",
    "docs",
    "site",
    "*.lock",
]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "RUF012", # mutable class attributes — false positives for Textual widget patterns (BINDINGS, etc.)
]

[tool.ruff.lint.per-file-ignores]
"src/santai_cli/commands/init.py" = ["E501"]  # long strings in README template
